<resources>
    <string name="app_name">BeautySalon</string>

    <!--loginActivity-->
    <string name="woker_mode">직원모드</string>
    <string name="id">ID</string>
    <string name="pw">PassWord</string>
    <string name="auto_login">자동 로그인</string>
    <string name="login">로그인</string>
    <string name="id_hint">아이디를 입력하세요</string>
    <string name="pw_hint">비밀번호를 입력하세요</string>

    <!--ViewDesignerDetail-->
    <string name="main_title">디자이너 둘러보기</string>
    <string name="designer_info">디자이너 상세정보</string>
    <string name="name">이름</string>
    <string name="gender">성별</string>
    <string name="nickname">닉네임</string>
    <string name="major_age">연령대</string>
    <string name="avgrating">평점</string>
    <string name="female">여자</string>
    <string name="male">남자</string>
    <string name="schecheck">리뷰남기기</string>
    <string name="reservation">예약하러가기</string>

    <!--MakeReservationActivity-->
    <string name="make_reservation">예약하기</string>
    <string name="reservation_date">예약날짜</string>
    <string name="select_date">날짜선택</string>
    <string name="reservation_time">예약시간</string>
    <string name="select_time">시간선택</string>
    <string name="reservation_confirm">예약 신청</string>
    <string name="style">원하는 스타일</string>
    <string name="large_category">대분류</string>
    <string name="small_category">소분류</string>

    <string-array name="hair_style">
        <item>반삭</item>
        <item>댄디컷</item>
        <item>샤기컷</item>
        <item>다운펌</item>
        <item>투블럭</item>
    </string-array>

    <!---->
    <string name="reservation_list">예약목록 확인</string>

    <!--Common-->
    <string name="preparing_message">준비중입니다.</string>
    <string name="reservation_message">예약이 완료되었습니다.</string>

    <string name="facebook_app_id">291467357926747</string>
    <string name="fb_login_protocol_scheme">fb291467357926747</string>

</resources>
