<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.thejoeunit.www.beautysalon.activities.ViewDesignerDetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/designer_info"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <TextView
            android:id="@+id/nameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="사람 이름이 표시됩니다." />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender" />

        <TextView
            android:id="@+id/genderTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="성별이 표시됩니다." />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname" />

        <TextView
            android:id="@+id/nickNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="닉네임이 표시됩니다." />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/major_age" />

        <TextView
            android:id="@+id/majorTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="주요 연령층이 표시됩니다." />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avgrating" />

        <TextView
            android:id="@+id/avgRatingTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="평점이 표시됩니다."
            android:textSize="17sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/star1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/star"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/star2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/star"
                android:visibility="gone" />


            <ImageView
                android:id="@+id/star3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/star"
                android:visibility="gone" />


            <ImageView
                android:id="@+id/star4"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/star"
                android:visibility="gone" />


            <ImageView
                android:id="@+id/star5"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/star"
                android:visibility="gone" />


        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/portfolioListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/scheCheckBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/schecheck"/>

        <Button
            android:id="@+id/reservationBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reservation"/>

    </LinearLayout>

</LinearLayout>
